--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap"); /*
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
+/*
   1. Use a more-intuitive box-sizing model.
 */
 *,
@@ -73,6 +74,16 @@ h6 {
 #root,
 #__next {
   isolation: isolate;
+}
+
+body {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: hsl(0deg, 36%, 70%);
+  background-image: url(../../img/bg-pattern-desktop.svg), linear-gradient(135deg, hsl(0deg, 0%, 100%), hsl(0deg, 100%, 98%));
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 /*# sourceMappingURL=main.css.map */
