--- a/scss/abstract/_variable.scss
+++ b/scss/abstract/_variable.scss
@@ -2,7 +2,7 @@
 // Primary colors
 $color-primary-desaturated-red: hsl(0, 36%, 70%);
 $color-primary-soft-red: hsl(0, 93%, 68%);
-
+$color-black: hsl(0, 0, 0);
 // Neutral Colors
 $color-neutral-dark-gray-red: hsl(0, 6%, 24%);
 
