--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -11,4 +11,18 @@ body {
     linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
   background-repeat: no-repeat;
   background-size: contain;
+  line-height: 1.4;
+}
+
+.heading-primary {
+  font-weight: $font-weight-light;
+  font-size: 2.2rem;
+  line-height: 1.1;
+  letter-spacing: 16px;
+  text-transform: uppercase;
+}
+
+span {
+  font-weight: $font-weight-semibold;
+  color: $color-black;
 }
