--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,10 +1,22 @@
 @use "../abstract/" as *;
 
 .hero {
+  &__img {
+    width: 100%;
+    object-fit: contain;
+  }
+
+  &__description {
+    max-width: 43ch;
+    margin-inline: auto;
+  }
+
   &__form {
     display: flex;
     flex-direction: column;
     position: relative;
+    max-width: 25rem;
+    margin: auto;
 
     &-input {
       border-radius: 35px;
